# M365-Copilot2API

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mcp_test_server.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
reference/docs/: js_bundle_analysis.md
src/m365_copilot/: __init__.py  __main__.py  auth.py  client.py  cookie_store.py  models.py  payload.py
src/m365_copilot/scripts/: crypto.py  plugin_loader.py  setup_wizard.py
src/m365_copilot/servers/: api.py  cli.py  openai.py
src/m365_copilot/tools/: __init__.py  builtin.py  detector.py  mcp_bridge.py  provider.py
tests/: debug_context.py  test_client.py  test_openai.py  test_tools.py
